Fixed overflow of pattern on booking page

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -1122,6 +1122,7 @@ img.coming_soon {
 	transition: filter 0.6s ease;
 }
 .booking .pattern_overlay {
+	position: absolute;
 	z-index: 0;
 	background: rgba(3 5 8 / 40%);
 	background-image: url(../img/pattern2.png);
